--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "faker": "^4.1.0",
-    "jest": "^24.7.1"
+    "jest": "^24.7.1",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   }
 }
